--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,6 @@
 *.zip
 *.tar.gz
 *.rar
-*/Java_Assignment
+Java_Assignment
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
